# kubernetes

./: .gitignore  README.md  renovate.json
.github/workflows/: backend-test-container.yaml  backend-tests.yaml  code-quality.yaml  quotes-api_pytest.yml
2048-game/: README.md  game_2048_deployment.yaml  game_2048_ingress.yaml  game_2048_service.yaml
backend/: Dockerfile  Dockerfile.backup  README.md  backend-deployment.yaml  backend-service.yaml  requirements.txt
backend/app/: main.py  requirements.txt
backend/routes/: dog_facts.py  healthcheck.py
database/: database-deployment.yaml  database-persistent-volume-claim.yaml
fastapi-k8s-example/backend/: Dockerfile  README.md  backend-autoscaler.yaml  backend-deployment.yaml  docker-compose.debug.yml  docker-compose.yml  gunicorn.conf.py
fastapi-k8s-example/database/: database-deployment.yaml  database-service.yaml
fastapi-k8s-example/frontend/: .dccache  Dockerfile  README.md  frontend-deployment.yaml  frontend-service.yaml  package.json
frontend/: .dockerignore  Dockerfile  frontend-deployment.yaml  nuxt.config.js  package.json
quotes-api/: Dockerfile  gunicorn.conf.py  makefile  pyproject.toml  quotes.json  requirements.txt
quotes-api/app/: main.py
quotes-api/kubernetes/: README.md  quotes_api_deployment.yaml  quotes_api_ingress.yaml  quotes_api_service.yml
quotes-api/tests/: test_quote_endpoints.py
traefik/: traefik-cluster-role-binding.yaml  traefik-cluster-role.yaml  traefik-deployment.yaml  traefik-ingress.yaml  traefik-service-account.yaml  traefik-service.yaml
(+11 files in other folders)
